Added section for Microsoft and added a blank line under each section

--- a/js-resume/index.html
+++ b/js-resume/index.html
@@ -54,6 +54,15 @@ ISO standard based on XML for storage of automation device properties.</p></div>
 of the devices via WSDL which can be controlled using Modbus Serial protocol. A silverlight client which can
 be used to connect to the server running the web service, such that the device can be controlled remotely.</p></div>
                         <div><p>&nbsp;&nbsp;&nbsp;Technologies: C#, .NET, Silverlight, Web Services, XML, SOAP, WSDL</p></div>
+
+                        <div class="blank"><p/></div>
+                        <div class="bold"><p>Microsoft Corporation</p></div>
+                        <div><p>Software Intern (June 2008 - July 2008)</p></div>
+                        <div><p>&nbsp;&nbsp;&nbsp;Project: Visual Studio Record and Play - 
+                            Visual studio has a feature called record and play which can record user activities and play it back. 
+                            This feature depends highly on accessibility capabilities of the application. </p></div>
+                        <div><p>&nbsp;&nbsp;&nbsp;Written a tool which checks the website and creates reports with information on to which extent
+                            the website or application can be recorded. Useful for clients who want to check their application compatibility.</p></div>
                 </td></tr>
             </table>
         </div>
