Added Projects section

--- a/js-resume/index.html
+++ b/js-resume/index.html
@@ -64,6 +64,33 @@ be used to connect to the server running the web service, such that the device c
                         <div><p>&nbsp;&nbsp;&nbsp;Written a tool which checks the website and creates reports with information on to which extent
                             the website or application can be recorded. Useful for clients who want to check their application compatibility.</p></div>
                 </td></tr>
+                <tr class="blank"><td>&nbsp;</td></tr>
+                <tr><td>
+                    <div class="title">Projects</div>
+                </td></tr>
+                <tr class="content"><td>
+                        <div class="bold"><p>Compiler for Object Oriented Pascal</p></div>
+                        <div class="italic"><p>Academic Project (Aug 2012 - Dec 2012)</p></div>
+                        <div><p>&nbsp;&nbsp;&nbsp;Construction of a compiler for an object oriented language which is similar to Pascal. Components of
+                            compiler implemented includes lexer, parser, intermediate representation generation, optimization and target code generation </p></div>
+                        <div><p>&nbsp;&nbsp;&nbsp;Technologies: C, gcc, Make, DejaGNU, lex, yacc</p></div>
+
+                        <div class="blank"><p/></div>
+                        <div class="bold"><p>The Zeitgeist Project</p></div>
+                        <div class="italic"><p>Open Source Project (Aug 2009 - Present)</p></div>
+                        <div><p>&nbsp;&nbsp;&nbsp;One of the core developers of Zeitgeist open source project which logs user activities and uses
+                               it to provide human contextual awareness to computer systems. I work on the components which use Python and PHP. 
+                               It uses SQLite database to store data and retrieves data using SQL. </p></div>
+                        <div><p>&nbsp;&nbsp;&nbsp;Technologies: Python, Vala, GObject, SQLite, DBus, Mono, C#</p></div>
+
+
+                        <div class="blank"><p/></div>
+                        <div class="bold"><p>Ubuntu</p></div>
+                        <div class="italic"><p>Open Source Project (2008 - Present)</p></div>
+                        <div><p>&nbsp;&nbsp;&nbsp; Developed Ubuntu Privacy Manager which is present in the default install of every Ubuntu. It is a tool which
+                                helps you fine tune your setting related to logging of useful data. Additionally I have contributed to software-properties and some launchpad components</p></div>
+                        <div><p>&nbsp;&nbsp;&nbsp;Tchnologies: Python, Gtk, GObject, DBus, Vala, Autotools</p></div>
+                </td></tr>
             </table>
         </div>
     </body>
